# kalnet

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
checkpoints/: kf_batch100.pt  kf_default.pt  kf_twogain_100batch.pt  kf_twogain_10batch.pt
kalnet/: __init__.py  collect_data.py  collect_data_rnn.py  correlation.py  correlation_rep_new.py  decoders.py  leace.py  minimality.py  task_vec.py  train.py  train_vec.py
notebooks/: analysis.ipynb  correlation_analysis.ipynb  correlation_analysis_rep_new.ipynb  decoder_analysis.ipynb  kalman_task.ipynb  minimality_analysis.ipynb  paper_task_and_train.ipynb  pca_analysis.ipynb  training.ipynb
paper_pytorch/: __init__.py  collect_data.py  collect_data_rnn.py  decode.py  model.py  probes.py  task.py  train.py  train_vec.py
paper_pytorch/networks/: kf_allgains_batch100.pt  kf_allgains_def.pt
