[project]
name = "kalnet"
version = "0.1.0"
description = "PyTorch port of Orhan & Ma (2017) Kalman filtering RNN"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22",
    "torch>=2.0",
    "matplotlib>=3.7",
    "ipykernel>=6.0",
    "jupyter>=1.0",
]

[project.scripts]
paper-train = "paper_pytorch.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paper_pytorch"]

[tool.uv]
package = true
