[project]
name = "kalnet"
version = "0.1.0"
description = "PyTorch port of Orhan & Ma (2017) Kalman filtering RNN"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22",
    "torch>=2.0",
    "matplotlib>=3.7",
    "ipykernel>=6.0",
    "jupyter>=1.0",
    "scipy>=1.15.3",
    "scikit-learn>=1.7.2",
]

[project.scripts]
kalnet-train = "kalnet.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kalnet"]

[tool.uv]
package = true
